[gd_scene load_steps=11 format=2]

[ext_resource path="res://Arena.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://MobA.tscn" type="PackedScene" id=3]
[ext_resource path="res://MobB.tscn" type="PackedScene" id=4]
[ext_resource path="res://MobC.tscn" type="PackedScene" id=5]
[ext_resource path="res://MobD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://sounds/sfx_3.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/shmup_track.wav" type="AudioStream" id=10]

[node name="ArenaB" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 2 )
MobA = ExtResource( 3 )
MobB = ExtResource( 4 )
MobC = ExtResource( 5 )
MobD = ExtResource( 6 )

[node name="MobSpawnTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="PowerUpSpawnTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TrainTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 15.0
one_shot = true
autostart = false

[node name="StartTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="WaveChangeTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="FireTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Player" parent="." index="6" instance=ExtResource( 7 )]

push_strength = 800
speed = 50

[node name="HUD" parent="." index="7" instance=ExtResource( 8 )]

[node name="AudioSFX1" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 9 )
volume_db = -3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Music" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 10 )
volume_db = -2.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="gameover" from="." to="." method="_on_ArenaB_gameover"]

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]

[connection signal="timeout" from="PowerUpSpawnTimer" to="." method="_on_PowerUpSpawnTimer_timeout"]

[connection signal="timeout" from="TrainTimer" to="." method="_on_TrainTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="timeout" from="WaveChangeTimer" to="." method="_on_WaveChangeTimer_timeout"]

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]

[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]


